--- a/Calendarro/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Calendarro/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,25 +2,29 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "";
 }
+<head>
+    <link href="~/css/site.css" rel="stylesheet" type="text/css" />
+</head>
 
 <h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
+<div class="container">
+    <div class="pb-3">
+        <div class="window">
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
+                <div class="label">
+                    Witaj w Calendarro
+                </div>
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
+                    @*<label asp-for="Input.Email"></label>*@
+                    <input asp-for="Input.Email" class="form-control" placeholder="Email" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
+                    @*<label asp-for="Input.Password"></label>*@
+                    <input asp-for="Input.Password" class="form-control" placeholder="Hasło" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -32,20 +36,22 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="submit" class="btn btn-primary">Zaloguj</button>
                 </div>
+                <hr />
                 <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                    <p class="register">
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Rejestracja</a>
                     </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                    <p class="forgotpw">
+                        <a id="forgot-password" asp-page="./ForgotPassword">Zapomniałem hasła</a>
                     </p>
                 </div>
             </form>
-        </section>
+        </div>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
@@ -74,9 +80,9 @@
                 }
             }
         </section>
+    </div>*@
     </div>
-</div>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
