--- a/Calendarro/Views/Shared/_Layout.cshtml
+++ b/Calendarro/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Kontakt</a>
                         </li>
                     </ul>
                 </div>
@@ -37,8 +37,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - Calendarro - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-center">
+            &copy; 2021 - Calendarro - <a asp-area="" asp-controller="Home" asp-action="Privacy">Kontakt</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
