--- a/Calendarro/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Calendarro/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model LogoutModel
 @{
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = "Poprawnie wylogowano";
 }
 
 <header>
     <h1>@ViewData["Title"]</h1>
-    <p>You have successfully logged out of the application.</p>
+    <p>Wylogowano.</p>
 </header>
