--- a/Calendarro/Views/Shared/_Layout.cshtml
+++ b/Calendarro/Views/Shared/_Layout.cshtml
@@ -26,6 +26,15 @@
                         </li>
                     </ul>
                 </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Dropdown menu</button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                        <a href="#">Link 4</a>
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
