--- a/Calendarro/wwwroot/css/site.css
+++ b/Calendarro/wwwroot/css/site.css
@@ -2,14 +2,14 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
 
 .btn-primary {
@@ -73,9 +73,9 @@ hr {
     text-align: center;
 }
 
-.forgotpw a:link{
-    color: white;
-}
+    .forgotpw a:link {
+        color: white;
+    }
 
 a:link, a:hover {
     color: white;
@@ -83,53 +83,180 @@ a:link, a:hover {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
+}
+
+.column {
+    float: left;
+    width: 50%;
+    height: 640px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.sqr {
+    display: inline-block;
+    position: relative;
+    width: 48%;
+    background-color: gray;
+    border: 5px solid dimgray;
+    border-radius: 10px;
+}
+
+    .sqr:after {
+        content: "";
+        display: block;
+        padding-bottom: 100%;
+    }
+
+.title {
+    margin-top: auto;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.calendar_buttons {
+    margin-top: 40px;
+}
+
+#button1, #button2 {
+    text-align: center;
+    width: 50px;
+    height: 40px;
+    background-color: white;
+}
+
+#button1 {
+    border-right: 5px solid dimgray;
+    border-top: 5px solid dimgray;
+}
+
+#button2 {
+    border-right: 5px solid dimgray;
+    border-top: 5px solid dimgray;
+}
+
+#button3 {
+    background-color: white;
+    text-align: center;
+    width: 50px;
+    height: 45px;
+    border-bottom: 5px solid dimgray;
+    border-right: 5px solid dimgray;
+    border-top: 5px solid dimgray;
+}
+
+a.btns {
+    color: black;
+    font-weight: bold;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: gray;
+    border: 5px solid dimgray;
+    border-radius: 10px;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    font-weight: bold;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+        /* Change color of dropdown links on hover */
+        .dropdown-content a:hover {
+            background-color: grey;
+        }
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: grey;
 }
