--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -13,11 +13,25 @@
                     <div class="title">
                         TODO
                     </div>
+                    <div class="dropdown" style="float: right;">
+                        <button class="kanbandropbtn">...</button>
+                        <div class="kanbandrop-content">
+                            <a href="#">+</a>
+                            <a href="#">-</a>
+                        </div>
+                    </div>
                     <div class="content"></div>
                 </div>
                 <div class="sqr">
                     <div class="title">
                         DONE
+                    </div>
+                    <div class="dropdown" style="float: right;">
+                        <button class="kanbandropbtn">...</button>
+                        <div class="kanbandrop-content">
+                            <a href="#">+</a>
+                            <a href="#">-</a>
+                        </div>
                     </div>
                     <div class="content"></div>
                 </div>
@@ -25,11 +39,25 @@
                     <div class="title">
                         NOTES
                     </div>
+                    <div class="dropdown" style="float: right;">
+                        <button class="kanbandropbtn">...</button>
+                        <div class="kanbandrop-content">
+                            <a href="#">+</a>
+                            <a href="#">-</a>
+                        </div>
+                    </div>
                     <div class="content"></div>
                 </div>
                 <div class="sqr">
                     <div class="title">
                         IN PROGRESS
+                    </div>
+                    <div class="dropdown" style="float: right;">
+                        <button class="kanbandropbtn">...</button>
+                        <div class="kanbandrop-content">
+                            <a href="#">+</a>
+                            <a href="#">-</a>
+                        </div>
                     </div>
                     <div class="content"></div>
                 </div>
