Test kalendarza na glownej stronie

--- a/Calendarro/Views/Calendar/Index.cshtml
+++ b/Calendarro/Views/Calendar/Index.cshtml
@@ -9,21 +9,48 @@
     <div id="calendar"></div>
 </div>
 
+
 @section Scripts{
 
     <link href="~/lib/fullcalendar/main.min.css" rel="stylesheet" />
     <script src="~/lib/fullcalendar/main.min.js"></script>
 
-    <script>
 
+    <script>
         document.addEventListener('DOMContentLoaded', function () {
             var calendarEl = document.getElementById('calendar');
+
             var calendar = new FullCalendar.Calendar(calendarEl, {
-                initialView: 'dayGridMonth',
-                locale: 'pl'
+                timeZone: 'UTC',
+                themeSystem: 'bootstrap',
+                headerToolbar: {
+                    left: '',
+                    center: '',
+                    right: ''
+                },
+                weekNumbers: false,
+                firstDay: '1',
+                fixedWeekCount: false,
+                themeSystem: 'bootstrap',
+                dayMaxEvents: false, // allow "more" link when too many events
+                events: 'http://localhost:5000/calendar/getalltasks?project=1'
             });
+
             calendar.render();
         });
+
+        //document.addEventListener('DOMContentLoaded', function () {
+        //    var calendarEl = document.getElementById('calendar');
+        //    var calendar = new FullCalendar.Calendar(calendarEl, {
+        //        initialView: 'dayGridMonth',
+        //        events: 'http://localhost:5000/calendar/getalltasks?project=1',
+        //        locale: 'pl',
+        //        start: '',
+        //        center: '',
+        //        end: ''
+        //    });
+        //    calendar.render();
+        //});
 
     </script>
 
