--- a/Calendarro/Views/Calendar/Index.cshtml
+++ b/Calendarro/Views/Calendar/Index.cshtml
@@ -5,10 +5,20 @@
 
 <h1>Index</h1>
 
-<div class="container">
-    <div id="calendar"></div>
-</div>
+<div class="col-md-7 container">
 
+    @*<div class="container">
+        <div id="calendar"></div>
+    </div>
+
+    <div class="container">
+        <div id="calendar2"></div>
+    </div>*@
+
+
+</div>
+@await Component.InvokeAsync("CalendarComponent")
+@await Component.InvokeAsync("CalendarComponent", new { number = 3 })
 
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="AddEvent">
     <div class="modal-dialog modal-lg">
@@ -19,20 +29,20 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            @*<div class="modal-body" id="valDate">
-                    <p>some content</p>
-                    <input type="text" name="dateValue" id="dateValue" value="" />
-                </div>*@
 
             @* TODO frontend poprawić tutaj *@
 
-            <form method="post" asp-controller="Calendar" asp-action="AddTask">
-                <div class="text-danger" asp-validation-summary="All"></div>
+            <form role="form" method="post" class="needs-validation" asp-controller="Calendar" asp-action="AddTask" id="modalForm">
+                <div class="text-danger" asp-validation-summary="ModelOnly"></div>
                 <div class="row">
+
+                    @* Poprawic walidaje danych *@
+
                     <div class="modal-body">
                         <div class="form-group">
                             <label asp-for="Name" class="col-form-label"></label>
                             <input asp-for="Name" type="text" class="form-control" id="task-name">
+                            <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="FinishDate" class="col-form-label"></label>
@@ -50,7 +60,9 @@
                     <input name="ProjectId" type="hidden" value="1" class="form-control" />
 
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary">Save Task</button>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Save Task</button>
+                        </div>
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </div>
@@ -59,11 +71,71 @@
     </div>
 </div>
 
+
 @section Scripts{
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var calendarEl = document.getElementById('calendar2');
+
+            var calendar = new FullCalendar.Calendar(calendarEl, {
+                timeZone: 'UTC',
+                themeSystem: 'bootstrap',
+                headerToolbar: {
+                    left: '',
+                    center: 'title',
+                    right: ''
+                },
+                weekNumbers: false,
+                firstDay: '1',
+                fixedWeekCount: false,
+                selectable: true,
+                contentHeight: "auto",
+                handleWindowResize: true,
+                dateClick: function (info) {
+                    $('#AddEvent').on('show.bs.modal', function (event) {
+                        var modal = $(this);
+
+                        modal.find('.modal-body #finish-date').val(info.dateStr)
+                    });
+                    //var dateValue = $(this).data(info.dateStr);
+                    //$("#AddEvent .modal-body #dateValue").val(dateValue);
+                    //$("#valDate").html(info.dateStr).modal('show');
+                    //var text = $(info.dateStr).val();
+                    //$("#modal_body").val(text);
+                    $("#AddEvent").modal('show');
+                },
+                dayMaxEvents: false,
+                events: 'http://localhost:5000/calendar/getalltasks?project=1'
+            });
+
+            calendar.render();
+        });
+    </script>
+
+    <script>
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
+
+    </script>
 
     <link href="~/lib/fullcalendar/main.min.css" rel="stylesheet" />
     <script src="~/lib/fullcalendar/main.min.js"></script>
-
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -81,6 +153,8 @@
                 firstDay: '1',
                 fixedWeekCount: false,
                 selectable: true,
+                contentHeight: "auto",
+                handleWindowResize: true,
                 dateClick: function (info) {
                     $('#AddEvent').on('show.bs.modal', function (event) {
                         var modal = $(this);
@@ -93,16 +167,13 @@
                     //var text = $(info.dateStr).val();
                     //$("#modal_body").val(text);
                     $("#AddEvent").modal('show');
-                    //alert('Date: ' + info.dateStr);
-                    //alert('Resource ID: ' + info.resource.id);
                 },
-                dayMaxEvents: false, // allow "more" link when too many events
+                dayMaxEvents: false,
                 events: 'http://localhost:5000/calendar/getalltasks?project=1'
             });
 
             calendar.render();
         });
-
     </script>
 
 }
