--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<Calendarro.Models.Database.Kanbans>
+@{
     ViewData["Title"] = "Calendarro";
 }
 <head>
@@ -9,58 +10,29 @@
     <div class="row">
         <div class="column" style="border-right: 5px solid dimgray">
             <div class="boards">
-                <div class="sqr">
-                    <div class="title">
-                        TODO
-                    </div>
-                    <div class="dropdown" style="float: right;">
-                        <button class="kanbandropbtn">...</button>
-                        <div class="kanbandrop-content">
-                            <a href="#">+</a>
-                            <a href="#">-</a>
+                @foreach (var kanban in Model)
+                {
+                    <div class="sqr">
+                        <div class="title">
+                            @kanban.Name
+                        </div>
+                        <div class="dropdown" style="float: right;">
+                            <button class="kanbandropbtn">...</button>
+                            <div class="kanbandrop-content">
+                                <a href="#">+</a>
+                                <a href="#">-</a>
+                            </div>
+                        </div>
+                        <div class="content">
+                            @foreach (var task in kanban.ProjectTasks)
+                            {
+                                <div>
+                                @task.TaskName
+                                </div>
+                            }
                         </div>
                     </div>
-                    <div class="content"></div>
-                </div>
-                <div class="sqr">
-                    <div class="title">
-                        DONE
-                    </div>
-                    <div class="dropdown" style="float: right;">
-                        <button class="kanbandropbtn">...</button>
-                        <div class="kanbandrop-content">
-                            <a href="#">+</a>
-                            <a href="#">-</a>
-                        </div>
-                    </div>
-                    <div class="content"></div>
-                </div>
-                <div class="sqr">
-                    <div class="title">
-                        NOTES
-                    </div>
-                    <div class="dropdown" style="float: right;">
-                        <button class="kanbandropbtn">...</button>
-                        <div class="kanbandrop-content">
-                            <a href="#">+</a>
-                            <a href="#">-</a>
-                        </div>
-                    </div>
-                    <div class="content"></div>
-                </div>
-                <div class="sqr">
-                    <div class="title">
-                        IN PROGRESS
-                    </div>
-                    <div class="dropdown" style="float: right;">
-                        <button class="kanbandropbtn">...</button>
-                        <div class="kanbandrop-content">
-                            <a href="#">+</a>
-                            <a href="#">-</a>
-                        </div>
-                    </div>
-                    <div class="content"></div>
-                </div>
+                }
             </div>
         </div>
         <div class="column" style="border-left: 5px solid dimgray">
