Dodano ustawianie nazwy dropboxa jako nazwę aktualnie wykorzystywanego projektu

--- a/Calendarro/Views/Shared/_LoginPartial.cshtml
+++ b/Calendarro/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
         <button class="button" onclick="alert('Zostanie dodany nowy projekt')">Add new project</button>
 
         <div class="dropdown">
-            <button class="dropbtn">Dropdown menu</button>
+            <button class="dropbtn">@Calendarro.Controllers.HomeController._currentProject.ProjectName</button>
             <div class="dropdown-content">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
