--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -61,6 +61,58 @@
                     </div>
                     <div class="content"></div>
                 </div>
+                <div class="sqr">
+                    <div class="title">
+                        IN PROGRESS
+                    </div>
+                    <div class="dropdown" style="float: right;">
+                        <button class="kanbandropbtn">...</button>
+                        <div class="kanbandrop-content">
+                            <a href="#">+</a>
+                            <a href="#">-</a>
+                        </div>
+                    </div>
+                    <div class="content"></div>
+                </div>
+                <div class="sqr">
+                    <div class="title">
+                        IN PROGRESS
+                    </div>
+                    <div class="dropdown" style="float: right;">
+                        <button class="kanbandropbtn">...</button>
+                        <div class="kanbandrop-content">
+                            <a href="#">+</a>
+                            <a href="#">-</a>
+                        </div>
+                    </div>
+                    <div class="content"></div>
+                </div>
+                <div class="sqr">
+                    <div class="title">
+                        IN PROGRESS
+                    </div>
+                    <div class="dropdown" style="float: right;">
+                        <button class="kanbandropbtn">...</button>
+                        <div class="kanbandrop-content">
+                            <a href="#">+</a>
+                            <a href="#">-</a>
+                        </div>
+                    </div>
+                    <div class="content"></div>
+                </div>
+                <div class="sqr">
+                    <div class="title">
+                        IN PROGRESS
+                    </div>
+                    <div class="dropdown" style="float: right;">
+                        <button class="kanbandropbtn">...</button>
+                        <div class="kanbandrop-content">
+                            <a href="#">+</a>
+                            <a href="#">-</a>
+                        </div>
+                    </div>
+                    <div class="content"></div>
+                </div>
             </div>
         </div>
         <div class="column" style="border-left: 5px solid dimgray">
