--- a/Calendarro/wwwroot/css/site.css
+++ b/Calendarro/wwwroot/css/site.css
@@ -309,3 +309,8 @@ a.btns {
     .dropdown:hover .kanbandrop-content {
         display: block;
     }
+
+.boards {
+    height: 535px;
+    overflow-y: scroll;
+}
