--- a/Calendarro/Views/Shared/_CalendarView1.cshtml
+++ b/Calendarro/Views/Shared/_CalendarView1.cshtml
@@ -1,48 +1,50 @@
 ﻿
 
 <div class="container">
-    <div id="calendar"></div>
+    <div id="calendar1"></div>
 </div>
 
 @section Scripts{
+    <link href="~/lib/fullcalendar/main.min.css" rel="stylesheet" />
+    <script src="~/lib/fullcalendar/main.min.js"></script>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var calendarEl = document.getElementById('calendar');
+            document.addEventListener('DOMContentLoaded', function () {
+                var calendarEl = document.getElementById('calendar1');
 
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                timeZone: 'UTC',
-                themeSystem: 'bootstrap',
-                headerToolbar: {
-                    left: '',
-                    center: 'title',
-                    right: ''
-                },
-                weekNumbers: false,
-                firstDay: '1',
-                fixedWeekCount: false,
-                selectable: true,
-                contentHeight: "auto",
-                handleWindowResize: true,
-                dateClick: function (info) {
-                    $('#AddEvent').on('show.bs.modal', function (event) {
-                        var modal = $(this);
+                var calendar = new FullCalendar.Calendar(calendarEl, {
+                    timeZone: 'UTC',
+                    themeSystem: 'bootstrap',
+                    headerToolbar: {
+                        left: '',
+                        center: 'title',
+                        right: ''
+                    },
+                    weekNumbers: false,
+                    firstDay: '1',
+                    fixedWeekCount: false,
+                    selectable: true,
+                    contentHeight: "auto",
+                    handleWindowResize: true,
+                    dateClick: function (info) {
+                        $('#AddEvent').on('show.bs.modal', function (event) {
+                            var modal = $(this);
 
-                        modal.find('.modal-body #finish-date').val(info.dateStr)
-                    });
-                    //var dateValue = $(this).data(info.dateStr);
-                    //$("#AddEvent .modal-body #dateValue").val(dateValue);
-                    //$("#valDate").html(info.dateStr).modal('show');
-                    //var text = $(info.dateStr).val();
-                    //$("#modal_body").val(text);
-                    $("#AddEvent").modal('show');
-                },
-                dayMaxEvents: false,
-                events: 'http://localhost:5000/calendar/getalltasks?project=1'
+                            modal.find('.modal-body #finish-date').val(info.dateStr)
+                        });
+                        //var dateValue = $(this).data(info.dateStr);
+                        //$("#AddEvent .modal-body #dateValue").val(dateValue);
+                        //$("#valDate").html(info.dateStr).modal('show');
+                        //var text = $(info.dateStr).val();
+                        //$("#modal_body").val(text);
+                        $("#AddEvent").modal('show');
+                    },
+                    dayMaxEvents: false,
+                    events: 'http://localhost:5000/calendar/getalltasks?project=1'
+                });
+
+                calendar.render();
             });
-
-            calendar.render();
-        });
-    </script>
+        </script>
 
 }
