--- a/Calendarro/Views/Shared/_CalendarView1.cshtml
+++ b/Calendarro/Views/Shared/_CalendarView1.cshtml
@@ -1,14 +1,14 @@
 ﻿
 
 <div class="container">
-    <div id="calendar1"></div>
+    <div id="calendar"></div>
 </div>
 
 @section Scripts{
     <link href="~/lib/fullcalendar/main.min.css" rel="stylesheet" />
     <script src="~/lib/fullcalendar/main.min.js"></script>
 
-    <script>
+    @*<script>
             document.addEventListener('DOMContentLoaded', function () {
                 var calendarEl = document.getElementById('calendar1');
 
@@ -45,6 +45,6 @@
 
                 calendar.render();
             });
-        </script>
+        </script>*@
 
 }
